--- a/_posts/2020-12-04-01_感知器.md
+++ b/_posts/2020-12-04-01_感知器.md
@@ -3,7 +3,7 @@ layout: post
 title: 感知器
 date: 2020-12-04
 Author: Zhiliang 
-tags: [Machine Learning, markdown]
+tags: [Machine Learning]
 comments: true
 toc: true
 ---
