--- a/_posts/2020-12-04-01_感知器.md
+++ b/_posts/2020-12-04-01_感知器.md
@@ -34,7 +34,9 @@ mathjax: true
 
 可以看到，一个感知器有如下组成部分：
 
-- **输入权值**：一个感知器可以接收多个输入$\left(x_1,x_2,\cdots,x_n \left| \right.x_i\in \Re\right)$，每个输入上有一个权值$w_i\in \Re$，此外还有一个偏置项$b\in \Re$，就是上面的$w_0$。
+- **输入权值**：一个感知器可以接收多个输入
+$\left(x_1,x_2,\cdots,x_n \left| \right.x_i\in \Re\right)$，每个输入上有一个权值
+$w_i\in \Re$，此外还有一个偏置项$b\in \Re$，就是上面的$w_0$。
 
   > **偏置项又叫偏置单元或者截距顶，他其实就是函数的截距。**与线性方程$y=wx+b$中的b的意义是一致的。
 
@@ -49,6 +51,7 @@ f\left( z \right) =\left\{ \begin{array}{l}
 $$
 
 - **输出**：感知器的输出由下面这个公式来计算
+
 $$
 y=f\left( \text{w}\cdot \text{x}+b \right)\tag{2.2}
 $$
