--- a/_posts/2020-12-05-01_线性单元和梯度下降.md
+++ b/_posts/2020-12-05-01_线性单元和梯度下降.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 线性单元和梯度下降
+title: Linear Unit And Gradient Descent
 date: 2020-12-05
 Author: Zhiliang 
 tags: [Machine Learning]
