--- a/_posts/2020-12-04-01_Perceptron.md
+++ b/_posts/2020-12-04-01_Perceptron.md
@@ -2,7 +2,7 @@
 layout: post
 title: 感知器
 date: 2020-12-04
-Author: Zhiliang 
+author: Zhiliang 
 tags: [Machine Learning]
 toc: true
 mathjax: true
