--- a/_posts/2020-12-04-01_Perceptron.md
+++ b/_posts/2020-12-04-01_Perceptron.md
@@ -134,3 +134,5 @@ $$
 $w_i$是与输入$x_i$对应的权重项，$b$是偏置项。事实上，可以把$b$看作是永远为1的输入$x_b$所对应的权重。$t$是训练样本的**实际值**，一般称之为**label**。而y是感知器的输出值，它是根据**公式(1)**计算得出。$\eta$是一个称为学习速率的常数，其作用是控制每一步调整权的幅度。
 
 每次从训练数据中取出一个样本的输入向量$\text{x}$，使用感知器计算其输出$y$，再根据上面的规则来调整权重。每处理一个样本就调整一次权重。经过多轮迭代后（全部的训练数据被反复处理多轮），就可以训练出感知器的权重，使之实现目标函数。
+
+转载自：[零基础入门深度学习(1) - 感知器](https://www.zybuluo.com/hanbingtao/note/433855)
