--- a/_posts/2021-01-23-01_Python Basic 01.md
+++ b/_posts/2021-01-23-01_Python Basic 01.md
@@ -112,3 +112,296 @@ C:\some\name
 > >
 > > 具有固定值的对象。不可变对象包括**数字、字符串和元组**。这样的对象不能被改变。如果必须存储一个不同的值，则必须创建新的对象。它们在需要常量哈希值的地方起着重要作用，例如作为字典中的键。
 
+### 列表
+
+Python 中可以通过组合一些值得到多种 *复合* 数据类型。可以通过<u>方括号括起、逗号分隔</u>的一组值（元素）得到。
+
+一个 *列表* <u>可以包含不同类型的元素，但通常使用时各个元素类型相同</u>
+
+列表可以切片，所有的切片操作都返回一个新列表`(浅)拷贝`
+
+> 列表是一个 [mutable](https://docs.python.org/zh-cn/3.6/glossary.html#term-mutable) 类型
+>
+> > 可变对象可以在其 [`id()`](https://docs.python.org/zh-cn/3.6/library/functions.html#id) 保持固定的情况下改变其取值。另请参见 [immutable](https://docs.python.org/zh-cn/3.6/glossary.html#term-immutable)。
+>
+> print:
+>
+> > 关键字参数 *end* 可以用来取消输出后面的换行, 或使用另外一个字符串来结尾
+> >
+> > ```python
+> > >>> a, b = 0, 1
+> > >>> while b < 1000:
+> > ...     print(b, end=',')
+> > ...     a, b = b, a+b
+> > ...
+> > 1,1,2,3,5,8,13,21,34,55,89,144,233,377,610,987,
+> > ```
+
+# 其他流程控制工具
+
+## [`if`](https://docs.python.org/zh-cn/3.6/reference/compound_stmts.html#if) Statements
+
+```python
+if_stmt ::=  "if" expression ":" suite
+             ("elif" expression ":" suite)*
+             ["else" ":" suite]
+```
+
+## [`for`](https://docs.python.org/zh-cn/3.6/reference/compound_stmts.html#for) Statements
+
+```python
+for_stmt ::=  "for" target_list "in" expression_list ":" suite
+              ["else" ":" suite]
+```
+
+> 如果在循环内需要修改序列中的值（比如重复某些选中的元素），推荐你先拷贝一份副本。
+>
+>  
+>
+> **使用切片会再内存中重新分配一块空间存储，与之前的地址不同**
+
+## [`range()`](https://docs.python.org/zh-cn/3.6/library/stdtypes.html#range) 函数
+
+给定的终止数值并不在要生成的序列里；`range(10)` 会生成10个值，并且是以合法的索引生成一个长度为10的序列。range也可以以另一个数字开头，或者以指定的幅度增加（甚至是负数；有时这也被叫做 ‘步进’）
+
+```python
+range(5, 10)
+   5, 6, 7, 8, 9
+
+range(0, 10, 3)
+   0, 3, 6, 9
+
+range(-10, -100, -30)
+  -10, -40, -70
+```
+
+## [`pass`](https://docs.python.org/zh-cn/3.6/reference/simple_stmts.html#pass) Statements
+
+[`pass`](https://docs.python.org/zh-cn/3.6/reference/simple_stmts.html#pass) 语句什么也不做。当语法上需要一个语句，但程序需要什么动作也不做时，可以使用它。
+
+```python
+'''
+最小类
+'''
+>>> class MyEmptyClass:
+...     pass
+...
+```
+
+## 定义函数
+
+关键字 [`def`](https://docs.python.org/zh-cn/3.6/reference/compound_stmts.html#def) 引入一个函数 *定义*。它必须后跟函数名称和带括号的形式参数列表。构成函数体的语句从下一行开始，并且必须缩进。
+
+## 函数定义的更多形式
+
+### 参数默认值
+
+最有用的形式是对一个或多个参数指定一个默认值。这样创建的函数，可以用比定义时允许的更少的参数调用。
+
+```python
+def ask_ok(prompt, retries=4, reminder='Please try again!'):
+    while True:
+        ok = input(prompt)
+        if ok in ('y', 'ye', 'yes'):
+            return True
+        if ok in ('n', 'no', 'nop', 'nope'):
+            return False
+        retries = retries - 1
+        if retries < 0:
+            raise ValueError('invalid user response')
+        print(reminder)
+```
+
+> **重要警告：** 默认值只会执行一次。这条规则在默认值为可变对象（列表、字典以及大多数类实例）时很重要。
+>
+> ```python
+> def f(a, L=[]):
+>     L.append(a)
+>     return L
+> 
+> print(f(1))
+> print(f(2))
+> print(f(3))
+> """
+> [1]
+> [1, 2]
+> [1, 2, 3]
+> """
+> ```
+
+### 关键字参数
+
+也可以使用形如 `kwarg=value` 的 [关键字参数](https://docs.python.org/zh-cn/3.6/glossary.html#term-keyword-argument) 来调用函数。
+
+> Argument：
+>
+> *关键字参数*: 在函数调用中前面带有标识符（例如 `name=`）或者作为包含在前面带有 `**` 的字典里的值传入。
+>
+> *位置参数*: 不属于关键字参数的参数。位置参数可出现于参数列表的开头以及/或者作为前面带有 `*` 的 [iterable](https://docs.python.org/zh-cn/3.6/glossary.html#term-iterable) 里的元素被传入。
+
+### 任意的参数列表
+
+一般来说，这些 `可变参数` 将在形式参数列表的末尾，因为它们收集传递给函数的所有剩余输入参数。出现在 `*args` 参数之后的任何形式参数都是 ‘仅关键字参数’，也就是说它们只能作为关键字参数而不能是位置参数。
+
+### 解包参数列表
+
+该章中关键字参数中`**`的使用
+
+### 函数标注
+
+注释作为字典存储在函数的Annotations属性中，对函数的任何其他部分都没有影响。参数注释是这样定义的:参数名后面有一个冒号，后面跟着一个表达式求注释的值。Return注释由一个文字`->`定义，后面跟着一个表达式，位于参数列表和表示def语句结束的冒号之间。下面的示例包含位置参数、关键字参数和带注释的返回值
+
+```python
+>>> def f(ham: str, eggs: str = 'eggs') -> str:
+...     print("Annotations:", f.__annotations__)
+...     print("Arguments:", ham, eggs)
+...     return ham + ' and ' + eggs
+...
+>>> f('spam')
+Annotations: {'ham': <class 'str'>, 'return': <class 'str'>, 'eggs': <class 'str'>}
+Arguments: spam eggs
+'spam and eggs'
+```
+
+# 数据结构
+
+## 列表的更多特性
+
+### 列表作为栈使用
+
+列表方法使得列表作为堆栈非常容易，最后一个插入，最先取出（“后进先出”）。要添加一个元素到堆栈的顶端，使用 `append()` 。要从堆栈顶部取出一个元素，使用 `pop()` ，不用指定索引。
+
+### 列表作为队列使用
+
+列表也可以用作队列，其中先添加的元素被最先取出 (“先进先出”)；然而列表用作这个目的相当低效。因为在列表的末尾添加和弹出元素非常快，但是在列表的开头插入或弹出元素却很慢 (因为所有的其他元素都必须移动一位)。
+
+### 列表推导式
+
+列表推导式提供了一个更简单的创建列表的方法。常见的用法是把某种操作应用于序列或可迭代对象的每个元素上，然后使用其结果来创建列表，或者通过满足某些特定条件元素来创建子序列。
+
+```python
+>>> from math import pi
+>>> [str(round(pi, i)) for i in range(1, 6)]
+['3.1', '3.14', '3.142', '3.1416', '3.14159']
+```
+
+### 嵌套的列表推导式
+
+列表推导式中的初始表达式可以是任何表达式，包括另一个列表推导式。
+
+```python
+>>> [[row[i] for row in matrix] for i in range(4)]
+[[1, 5, 9], [2, 6, 10], [3, 7, 11], [4, 8, 12]]
+```
+
+## The [`del`](https://docs.python.org/zh-cn/3.6/reference/simple_stmts.html#del) statement
+
+有一种方法可以从列表中删除指定索引而不是值的项:del语句。这与pop()方法不同，后者会返回一个值。del语句还可以用于从列表中删除切片或清除整个列表。
+
+[`del`](https://docs.python.org/zh-cn/3.6/reference/simple_stmts.html#del) 也可以删除整个变量
+
+```python
+>>> del a
+```
+
+## 元组和序列
+
+一个元组由几个被逗号隔开的值组成。
+
+元组在输出时总是被圆括号包围的，以便正确表示嵌套元组。输入时圆括号可有可无，不过经常会是必须的（如果这个元组是一个更大的表达式的一部分）。给元组中的一个单独的元素赋值是不允许的，当然你可以创建包含可变对象的元组，例如列表。
+
+```python
+>>> t = 12345, 54321, 'hello!'
+>>> t
+(12345, 54321, 'hello!')
+```
+
+> 元组是 [immutable](https://docs.python.org/zh-cn/3.6/glossary.html#term-immutable) ，其序列通常包含不同种类的元素，并且通过解包（这一节下面会解释）或者索引来访问（如果是 [`namedtuples`](https://docs.python.org/zh-cn/3.6/library/collections.html#collections.namedtuple) 的话甚至还可以通过属性访问）。列表是 [mutable](https://docs.python.org/zh-cn/3.6/glossary.html#term-mutable) ，并且列表中的元素一般是同种类型的，并且通过迭代访问。
+
+## 集合
+
+集合是由不重复元素组成的无序的集。它的基本用法包括成员检测和消除重复元素。集合对象也支持像 联合，交集，差集，对称差分等数学运算。
+
+花括号或 [`set()`](https://docs.python.org/zh-cn/3.6/library/stdtypes.html#set) 函数可以用来创建集合。注意：要创建一个空集合你只能用 `set()` 而不能用 `{}`，因为后者是创建一个空字典。
+
+## 字典
+
+与以连续整数为索引的序列不同，字典是以 *关键字* 为索引的，关键字可以是任意不可变类型，通常是字符串或数字。
+
+如果一个元组只包含字符串、数字或元组，那么这个元组也可以用作关键字。但如果元组直接或间接地包含了可变对象，那么它就不能用作关键字。
+
+字典主要的操作是使用关键字存储和解析值。也可以用 `del` 来删除一个键值对。如果你使用了一个已经存在的关键字来存储值，那么之前与这个关键字关联的值就会被遗忘。
+
+[`dict()`](https://docs.python.org/zh-cn/3.6/library/stdtypes.html#dict) 构造函数可以直接从键值对序列里创建字典。
+
+```python
+>>> dict([('sape', 4139), ('guido', 4127), ('jack', 4098)])
+{'sape': 4139, 'jack': 4098, 'guido': 4127}
+```
+
+字典推导式可以从任意的键值表达式中创建字典
+
+```python
+>>> {x: x**2 for x in (2, 4, 6)}
+{2: 4, 4: 16, 6: 36}
+```
+
+当关键字是简单字符串时，有时直接通过关键字参数来指定键值对更方便
+
+```python
+>>> dict(sape=4139, guido=4127, jack=4098)
+{'sape': 4139, 'jack': 4098, 'guido': 4127}
+```
+
+## 循环的技巧
+
+当在字典中循环时，用 `items()` 方法可将关键字和对应的值同时取出
+
+当在序列中循环时，用 [`enumerate()`](https://docs.python.org/zh-cn/3.6/library/functions.html#enumerate) 函数可以将索引位置和其对应的值同时取出
+
+```python
+>>> for i, v in enumerate(['tic', 'tac', 'toe']):
+...     print(i, v)
+...
+0 tic
+1 tac
+2 toe
+```
+
+当同时在两个或更多序列中循环时，可以用 [`zip()`](https://docs.python.org/zh-cn/3.6/library/functions.html#zip) 函数将其内元素一一匹配。
+
+```python
+>>> questions = ['name', 'quest', 'favorite color']
+>>> answers = ['lancelot', 'the holy grail', 'blue']
+>>> for q, a in zip(questions, answers):
+...     print('What is your {0}?  It is {1}.'.format(q, a))
+...
+What is your name?  It is lancelot.
+What is your quest?  It is the holy grail.
+What is your favorite color?  It is blue.
+```
+
+如果要逆向循环一个序列，可以先正向定位序列，然后调用 [`reversed()`](https://docs.python.org/zh-cn/3.6/library/functions.html#reversed) 函数
+
+```python
+>>> for i in reversed(range(1, 10, 2)):
+...     print(i)
+...
+9
+7
+5
+3
+1
+```
+
+如果要按某个指定顺序循环一个序列，可以用 [`sorted()`](https://docs.python.org/zh-cn/3.6/library/functions.html#sorted) 函数，它可以在不改动原序列的基础上返回一个新的排好序的序列
+
+## 深入条件控制
+
+比较操作符 `in` 和 `not in` 校验一个值是否在（或不在）一个序列里。操作符 `is` 和 `is not` 比较两个对象是不是同一个对象，这只对像列表这样的可变对象比较重要。
+
+比较操作可以传递。例如 `a < b == c` 会校验是否 `a` 小于 `b` 并且 `b` 等于 `c`。
+
+布尔运算符 `and` 和 `or` 也被称为 *短路* 运算符：它们的参数从左至右解析，一旦可以确定结果解析就会停止。
+
+> `and` `or` `not` 中`not`优先级最高
