--- a/_posts/2021-01-23-01_Python Basic 01.md
+++ b/_posts/2021-01-23-01_Python Basic 01.md
@@ -141,7 +141,7 @@ Python 中可以通过组合一些值得到多种 *复合* 数据类型。可以
 
 # 其他流程控制工具
 
-## [`if`](https://docs.python.org/zh-cn/3.6/reference/compound_stmts.html#if) Statements
+## if Statements
 
 ```python
 if_stmt ::=  "if" expression ":" suite
@@ -149,7 +149,7 @@ if_stmt ::=  "if" expression ":" suite
              ["else" ":" suite]
 ```
 
-## [`for`](https://docs.python.org/zh-cn/3.6/reference/compound_stmts.html#for) Statements
+## for Statements
 
 ```python
 for_stmt ::=  "for" target_list "in" expression_list ":" suite
@@ -162,7 +162,7 @@ for_stmt ::=  "for" target_list "in" expression_list ":" suite
 >
 > **使用切片会再内存中重新分配一块空间存储，与之前的地址不同**
 
-## [`range()`](https://docs.python.org/zh-cn/3.6/library/stdtypes.html#range) 函数
+## range() 函数
 
 给定的终止数值并不在要生成的序列里；`range(10)` 会生成10个值，并且是以合法的索引生成一个长度为10的序列。range也可以以另一个数字开头，或者以指定的幅度增加（甚至是负数；有时这也被叫做 ‘步进’）
 
@@ -177,7 +177,7 @@ range(-10, -100, -30)
   -10, -40, -70
 ```
 
-## [`pass`](https://docs.python.org/zh-cn/3.6/reference/simple_stmts.html#pass) Statements
+## pass Statements
 
 [`pass`](https://docs.python.org/zh-cn/3.6/reference/simple_stmts.html#pass) 语句什么也不做。当语法上需要一个语句，但程序需要什么动作也不做时，可以使用它。
 
@@ -296,7 +296,7 @@ Arguments: spam eggs
 [[1, 5, 9], [2, 6, 10], [3, 7, 11], [4, 8, 12]]
 ```
 
-## The [`del`](https://docs.python.org/zh-cn/3.6/reference/simple_stmts.html#del) statement
+## The del statement
 
 有一种方法可以从列表中删除指定索引而不是值的项:del语句。这与pop()方法不同，后者会返回一个值。del语句还可以用于从列表中删除切片或清除整个列表。
 
@@ -452,7 +452,7 @@ python fibo.py <arguments>
 
 Python附带了一个标准模块库，在单独的文档Python库参考（以下称为“库参考”）中进行了描述。一些模块内置于解释器中；它们提供对不属于语言核心但仍然内置的操作的访问，以提高效率或提供对系统调用等操作系统原语的访问。这些模块的集合是一个配置选项，它也取决于底层平台。
 
-## [`dir()`](https://docs.python.org/zh-cn/3.6/library/functions.html#dir) 函数
+## dir() 函数
 
 内置函数 [`dir()`](https://docs.python.org/zh-cn/3.6/library/functions.html#dir) 用于查找模块定义的名称。
 
@@ -622,7 +622,7 @@ True
 
 `f.write(string)` 会把 *string* 的内容写入到文件中，并返回写入的字符数。
 
-### 使用 [`json`](https://docs.python.org/zh-cn/3.6/library/json.html#module-json) 保存结构化数据
+### 使用 json 保存结构化数据
 
 Python 允许你使用称为 [JSON (JavaScript Object Notation)](http://json.org/) 的流行数据交换格式，而不是让用户不断的编写和调试代码以将复杂的数据类型保存到文件中。名为 [`json`](https://docs.python.org/zh-cn/3.6/library/json.html#module-json) 的标准模块可以采用 Python 数据层次结构，并将它们转化为字符串表示形式；这个过程称为 *serializing* 。从字符串表示中重建数据称为 *deserializing* 。在序列化和反序列化之间，表示对象的字符串可能已存储在文件或数据中，或通过网络连接发送到某个远程机器。
 
