--- a/_posts/2021-01-23-01_Python Basic 01.md
+++ b/_posts/2021-01-23-01_Python Basic 01.md
@@ -653,3 +653,33 @@ x = json.load(f)
 > [`pickle`](https://docs.python.org/zh-cn/3.6/library/pickle.html#module-pickle) - 封存模块
 >
 > 与 [JSON](https://docs.python.org/zh-cn/3.6/tutorial/inputoutput.html#tut-json) 不同，*pickle* 是一种允许对任意复杂 Python 对象进行序列化的协议。因此，它为 Python 所特有，不能用于与其他语言编写的应用程序通信。默认情况下它也是不安全的：如果数据是由熟练的攻击者精心设计的，则反序列化来自不受信任来源的 pickle 数据可以执行任意代码。
+
+# 标准库简介
+
+## 操作系统接口
+
+[`os`](https://docs.python.org/zh-cn/3.6/library/os.html#module-os) 模块提供了许多与操作系统交互的函数:
+
+```python
+>>> import os
+>>> os.getcwd()      # Return the current working directory
+'C:\\Python36'
+>>> os.chdir('/server/accesslogs')   # Change current working directory
+>>> os.system('mkdir today')   # Run the command mkdir in the system shell
+0
+```
+
+一定要使用 `import os` 而不是 `from os import *` 。这将避免内建的 [`open()`](https://docs.python.org/zh-cn/3.6/library/functions.html#open) 函数被 [`os.open()`](https://docs.python.org/zh-cn/3.6/library/os.html#os.open) 隐式替换掉，它们的使用方式大不相同。
+
+
+
+## 文件通配符
+
+[`glob`](https://docs.python.org/zh-cn/3.6/library/glob.html#module-glob) 模块提供了一个在目录中使用通配符搜索创建文件列表的函数:
+
+```python
+>>> import glob
+>>> glob.glob('*.py')
+['primes.py', 'random.py', 'quote.py']
+```
+
