--- a/_posts/2021-02-04-01_Python Basic 02.md
+++ b/_posts/2021-02-04-01_Python Basic 02.md
@@ -426,3 +426,475 @@ g
 ['f', 'l', 'o', 'g']
 ```
 
+# 标准库简介
+
+## 操作系统接口
+
+[`os`](https://docs.python.org/zh-cn/3.6/library/os.html#module-os) 模块提供了许多与操作系统交互的函数:
+
+\>>>
+
+```python
+>>> import os
+>>> os.getcwd()      # Return the current working directory
+'C:\\Python36'
+>>> os.chdir('/server/accesslogs')   # Change current working directory
+>>> os.system('mkdir today')   # Run the command mkdir in the system shell
+0
+```
+
+一定要使用 `import os` 而不是 `from os import *` 。这将避免内建的 [`open()`](https://docs.python.org/zh-cn/3.6/library/functions.html#open) 函数被 [`os.open()`](https://docs.python.org/zh-cn/3.6/library/os.html#os.open) 隐式替换掉，它们的使用方式大不相同。
+
+对于日常文件和目录管理任务， [`shutil`](https://docs.python.org/zh-cn/3.6/library/shutil.html#module-shutil) 模块提供了更易于使用的更高级别的接口:
+
+```python
+>>> import shutil
+>>> shutil.copyfile('data.db', 'archive.db')
+'archive.db'
+>>> shutil.move('/build/executables', 'installdir')
+'installdir'
+```
+
+## 文件通配符
+
+[`glob`](https://docs.python.org/zh-cn/3.6/library/glob.html#module-glob) 模块提供了一个在目录中使用通配符搜索创建文件列表的函数:
+
+```python
+>>> import glob
+>>> glob.glob('*.py')
+['primes.py', 'random.py', 'quote.py']
+```
+
+## 命令行参数
+
+通用实用程序脚本通常需要处理命令行参数。这些参数作为列表存储在 [`sys`](https://docs.python.org/zh-cn/3.6/library/sys.html#module-sys) 模块的 *argv* 属性中。例如，以下输出来自在命令行运行 `python demo.py one two three`
+
+## 错误输出重定向和程序终止
+
+[`sys`](https://docs.python.org/zh-cn/3.6/library/sys.html#module-sys) 模块还具有 *stdin* ， *stdout* 和 *stderr* 的属性。后者对于发出警告和错误消息非常有用，即使在 *stdout* 被重定向后也可以看到它们:
+
+```python
+>>> sys.stderr.write('Warning, log file not found starting a new one\n')
+Warning, log file not found starting a new one
+```
+
+终止脚本的最直接方法是使用 `sys.exit()` 。
+
+## 字符串模式匹配
+
+[`re`](https://docs.python.org/zh-cn/3.6/library/re.html#module-re) 模块为高级字符串处理提供正则表达式工具。对于复杂的匹配和操作，正则表达式提供简洁，优化的解决方案:
+
+```python
+>>> import re
+>>> re.findall(r'\bf[a-z]*', 'which foot or hand fell fastest')
+['foot', 'fell', 'fastest']
+>>> re.sub(r'(\b[a-z]+) \1', r'\1', 'cat in the the hat')
+'cat in the hat'
+```
+
+## 数学
+
+[`math`](https://docs.python.org/zh-cn/3.6/library/math.html#module-math) 模块提供对浮点数学的底层C库函数的访问。
+
+[`random`](https://docs.python.org/zh-cn/3.6/library/random.html#module-random) 模块提供了进行随机选择的工具。
+
+[`statistics`](https://docs.python.org/zh-cn/3.6/library/statistics.html#module-statistics) 模块计算数值数据的基本统计属性（均值，中位数，方差等）
+
+```python
+>>> import statistics
+>>> data = [2.75, 1.75, 1.25, 0.25, 0.5, 1.25, 3.5]
+>>> statistics.mean(data)
+1.6071428571428572
+>>> statistics.median(data)
+1.25
+>>> statistics.variance(data)
+1.3720238095238095
+```
+
+SciPy项目 [<https://scipy.org>](https://scipy.org/) 有许多其他模块用于数值计算。
+
+## 互联网访问
+
+有许多模块可用于访问互联网和处理互联网协议。其中两个最简单的 [`urllib.request`](https://docs.python.org/zh-cn/3.6/library/urllib.request.html#module-urllib.request) 用于从URL检索数据，以及 [`smtplib`](https://docs.python.org/zh-cn/3.6/library/smtplib.html#module-smtplib) 用于发送邮件:
+
+```python
+>>> from urllib.request import urlopen
+>>> with urlopen('http://tycho.usno.navy.mil/cgi-bin/timer.pl') as response:
+...     for line in response:
+...         line = line.decode('utf-8')  # Decoding the binary data to text.
+...         if 'EST' in line or 'EDT' in line:  # look for Eastern Time
+...             print(line)
+
+<BR>Nov. 25, 09:43:32 PM EST
+
+>>> import smtplib
+>>> server = smtplib.SMTP('localhost')
+>>> server.sendmail('soothsayer@example.org', 'jcaesar@example.org',
+... """To: jcaesar@example.org
+... From: soothsayer@example.org
+...
+... Beware the Ides of March.
+... """)
+>>> server.quit()
+```
+
+## 日期和时间
+
+[`datetime`](https://docs.python.org/zh-cn/3.6/library/datetime.html#module-datetime) 模块提供了以简单和复杂的方式操作日期和时间的类。虽然支持日期和时间算法，但实现的重点是有效的成员提取以进行输出格式化和操作。该模块还支持可感知时区的对象。
+
+```python
+>>> # dates are easily constructed and formatted
+>>> from datetime import date
+>>> now = date.today()
+>>> now
+datetime.date(2003, 12, 2)
+>>> now.strftime("%m-%d-%y. %d %b %Y is a %A on the %d day of %B.")
+'12-02-03. 02 Dec 2003 is a Tuesday on the 02 day of December.'
+
+>>> # dates support calendar arithmetic
+>>> birthday = date(1964, 7, 31)
+>>> age = now - birthday
+>>> age.days
+14368
+```
+
+## 数据压缩
+
+常见的数据存档和压缩格式由模块直接支持，包括：[`zlib`](https://docs.python.org/zh-cn/3.6/library/zlib.html#module-zlib), [`gzip`](https://docs.python.org/zh-cn/3.6/library/gzip.html#module-gzip), [`bz2`](https://docs.python.org/zh-cn/3.6/library/bz2.html#module-bz2), [`lzma`](https://docs.python.org/zh-cn/3.6/library/lzma.html#module-lzma), [`zipfile`](https://docs.python.org/zh-cn/3.6/library/zipfile.html#module-zipfile) 和 [`tarfile`](https://docs.python.org/zh-cn/3.6/library/tarfile.html#module-tarfile)。:
+
+```python
+>>> import zlib
+>>> s = b'witch which has which witches wrist watch'
+>>> len(s)
+41
+>>> t = zlib.compress(s)
+>>> len(t)
+37
+>>> zlib.decompress(t)
+b'witch which has which witches wrist watch'
+>>> zlib.crc32(s)
+226805979
+```
+
+## 性能测量
+
+Python提供了一种可以立即回答这些问题的测量工具。
+
+```python
+>>> from timeit import Timer
+>>> Timer('t=a; a=b; b=t', 'a=1; b=2').timeit()
+0.57535828626024577
+>>> Timer('a,b = b,a', 'a=1; b=2').timeit()
+0.54962537085770791
+```
+
+与 [`timeit`](https://docs.python.org/zh-cn/3.6/library/timeit.html#module-timeit) 的精细粒度级别相反， [`profile`](https://docs.python.org/zh-cn/3.6/library/profile.html#module-profile) 和 [`pstats`](https://docs.python.org/zh-cn/3.6/library/profile.html#module-pstats) 模块提供了用于在较大的代码块中识别时间关键部分的工具。
+
+## 质量控制
+
+[`doctest`](https://docs.python.org/zh-cn/3.6/library/doctest.html#module-doctest) 模块提供了一个工具，用于扫描模块并验证程序文档字符串中嵌入的测试。测试构造就像将典型调用及其结果剪切并粘贴到文档字符串一样简单。这通过向用户提供示例来改进文档，并且它允许`doctest`模块确保代码保持对文档的真实:
+
+```python
+def average(values):
+    """Computes the arithmetic mean of a list of numbers.
+
+    >>> print(average([20, 30, 70]))
+    40.0
+    """
+    return sum(values) / len(values)
+
+import doctest
+doctest.testmod()   # automatically validate the embedded tests
+```
+
+[`unittest`](https://docs.python.org/zh-cn/3.6/library/unittest.html#module-unittest) 模块不像 [`doctest`](https://docs.python.org/zh-cn/3.6/library/doctest.html#module-doctest) 模块那样易于使用，但它允许在一个单独的文件中维护更全面的测试集:
+
+```python
+import unittest
+
+class TestStatisticalFunctions(unittest.TestCase):
+
+    def test_average(self):
+        self.assertEqual(average([20, 30, 70]), 40.0)
+        self.assertEqual(round(average([1, 5, 7]), 1), 4.3)
+        with self.assertRaises(ZeroDivisionError):
+            average([])
+        with self.assertRaises(TypeError):
+            average(20, 30, 70)
+
+unittest.main()  # Calling from the command line invokes all tests
+```
+
+## 格式化输出
+
+[`reprlib`](https://docs.python.org/zh-cn/3.6/library/reprlib.html#module-reprlib) 模块提供了一个定制化版本的 [`repr()`](https://docs.python.org/zh-cn/3.6/library/functions.html#repr) 函数，用于缩略显示大型或深层嵌套的容器对象。
+
+[`pprint`](https://docs.python.org/zh-cn/3.6/library/pprint.html#module-pprint) 模块提供了更加复杂的打印控制，其输出的内置对象和用户自定义对象能够被解释器直接读取。当输出结果过长而需要折行时，“美化输出机制”会添加换行符和缩进，以更清楚地展示数据结构。
+
+[`textwrap`](https://docs.python.org/zh-cn/3.6/library/textwrap.html#module-textwrap) 模块能够格式化文本段落，以适应给定的屏幕宽度。
+
+[`locale`](https://docs.python.org/zh-cn/3.6/library/locale.html#module-locale) 模块处理与特定地域文化相关的数据格式。locale 模块的 format 函数包含一个 grouping 属性，可直接将数字格式化为带有组分隔符的样式。
+
+## 模板
+
+[`string`](https://docs.python.org/zh-cn/3.6/library/string.html#module-string) 模块包含一个通用的 [`Template`](https://docs.python.org/zh-cn/3.6/library/string.html#string.Template) 类，具有适用于最终用户的简化语法。它允许用户在不更改应用逻辑的情况下定制自己的应用。
+
+上述格式化操作是通过占位符实现的，占位符由 `$` 加上合法的 Python 标识符（只能包含字母、数字和下划线）构成。一旦使用花括号将占位符括起来，就可以在后面直接跟上更多的字母和数字而无需空格分割。`$$` 将被转义成单个字符 `$`:
+
+```python
+>>> from string import Template
+>>> t = Template('${village}folk send $$10 to $cause.')
+>>> t.substitute(village='Nottingham', cause='the ditch fund')
+'Nottinghamfolk send $10 to the ditch fund.'
+```
+
+如果在字典或关键字参数中未提供某个占位符的值，那么 [`substitute()`](https://docs.python.org/zh-cn/3.6/library/string.html#string.Template.substitute) 方法将抛出 [`KeyError`](https://docs.python.org/zh-cn/3.6/library/exceptions.html#KeyError)。
+
+## 使用二进制数据记录格式
+
+[`struct`](https://docs.python.org/zh-cn/3.6/library/struct.html#module-struct) 模块提供了 [`pack()`](https://docs.python.org/zh-cn/3.6/library/struct.html#struct.pack) 和 [`unpack()`](https://docs.python.org/zh-cn/3.6/library/struct.html#struct.unpack) 函数，用于处理不定长度的二进制记录格式。
+
+## 多线程
+
+线程是一种对于非顺序依赖的多个任务进行解耦的技术。多线程可以提高应用的响应效率，当接收用户输入的同时，保持其他任务在后台运行。
+
+以下代码展示了高阶的 [`threading`](https://docs.python.org/zh-cn/3.6/library/threading.html#module-threading) 模块如何在后台运行任务，且不影响主程序的继续运行:
+
+```python
+import threading, zipfile
+
+class AsyncZip(threading.Thread):
+    def __init__(self, infile, outfile):
+        threading.Thread.__init__(self)
+        self.infile = infile
+        self.outfile = outfile
+
+    def run(self):
+        f = zipfile.ZipFile(self.outfile, 'w', zipfile.ZIP_DEFLATED)
+        f.write(self.infile)
+        f.close()
+        print('Finished background zip of:', self.infile)
+
+background = AsyncZip('mydata.txt', 'myarchive.zip')
+background.start()
+print('The main program continues to run in foreground.')
+
+background.join()    # Wait for the background task to finish
+print('Main program waited until background was done.')
+```
+
+多线程应用面临的主要挑战是，相互协调的多个线程之间需要共享数据或其他资源。为此，threading 模块提供了多个同步操作原语，包括线程锁、事件、条件变量和信号量。
+
+## 日志记录
+
+[`logging`](https://docs.python.org/zh-cn/3.6/library/logging.html#module-logging) 模块提供功能齐全且灵活的日志记录系统。在最简单的情况下，日志消息被发送到文件或 `sys.stderr`
+
+```python
+import logging
+logging.debug('Debugging information')
+logging.info('Informational message')
+logging.warning('Warning:config file %s not found', 'server.conf')
+logging.error('Error occurred')
+logging.critical('Critical error -- shutting down')
+```
+
+这会产生以下输出:
+
+```
+WARNING:root:Warning:config file server.conf not found
+ERROR:root:Error occurred
+CRITICAL:root:Critical error -- shutting down
+```
+
+默认情况下，informational 和 debugging 消息被压制，输出会发送到标准错误流。其他输出选项包括将消息转发到电子邮件，数据报，套接字或 HTTP 服务器。新的过滤器可以根据消息优先级选择不同的路由方式：`DEBUG`，`INFO`，`WARNING`，`ERROR`，和 `CRITICAL`。
+
+日志系统可以直接从 Python 配置，也可以从用户配置文件加载，以便自定义日志记录而无需更改应用程序。
+
+## 弱引用
+
+Python 会自动进行内存管理（对大多数对象进行引用计数并使用 [garbage collection](https://docs.python.org/zh-cn/3.6/glossary.html#term-garbage-collection) 来清除循环引用）。 当某个对象的最后一个引用被移除后不久就会释放其所占用的内存。
+
+[`weakref`](https://docs.python.org/zh-cn/3.6/library/weakref.html#module-weakref) 模块提供的工具可以不必创建引用就能跟踪对象。 当对象不再需要时，它将自动从一个弱引用表中被移除，并为弱引用对象触发一个回调。 典型应用包括对创建开销较大的对象进行缓存:
+
+```python
+>>> import weakref, gc
+>>> class A:
+...     def __init__(self, value):
+...         self.value = value
+...     def __repr__(self):
+...         return str(self.value)
+...
+>>> a = A(10)                   # create a reference
+>>> d = weakref.WeakValueDictionary()
+>>> d['primary'] = a            # does not create a reference
+>>> d['primary']                # fetch the object if it is still alive
+10
+>>> del a                       # remove the one reference
+>>> gc.collect()                # run garbage collection right away
+0
+>>> d['primary']                # entry was automatically removed
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+    d['primary']                # entry was automatically removed
+  File "C:/python36/lib/weakref.py", line 46, in __getitem__
+    o = self.data[key]()
+KeyError: 'primary'
+```
+
+## 用于操作列表的工具
+
+[`array`](https://docs.python.org/zh-cn/3.6/library/array.html#module-array) 模块提供了一种 [`array()`](https://docs.python.org/zh-cn/3.6/library/array.html#array.array) 对象，它类似于列表，但只能存储类型一致的数据且存储密集更高。
+
+[`collections`](https://docs.python.org/zh-cn/3.6/library/collections.html#module-collections) 模块提供了一种 [`deque()`](https://docs.python.org/zh-cn/3.6/library/collections.html#collections.deque) 对象，它类似于列表，但从左端添加和弹出的速度较快，而在中间查找的速度较慢。
+
+[`heapq`](https://docs.python.org/zh-cn/3.6/library/heapq.html#module-heapq) 模块提供了基于常规列表来实现堆的函数。 最小值的条目总是保持在位置零。 这对于需要重复访问最小元素而不希望运行完整列表排序的应用来说非常有用:
+
+```python
+>>> from heapq import heapify, heappop, heappush
+>>> data = [1, 3, 5, 7, 9, 2, 4, 6, 8, 0]
+>>> heapify(data)                      # rearrange the list into heap order
+>>> heappush(data, -5)                 # add a new entry
+>>> [heappop(data) for i in range(3)]  # fetch the three smallest entries
+[-5, 0, 1]
+```
+
+## 十进制浮点运算
+
+[`decimal`](https://docs.python.org/zh-cn/3.6/library/decimal.html#module-decimal) 模块提供了一种 [`Decimal`](https://docs.python.org/zh-cn/3.6/library/decimal.html#decimal.Decimal) 数据类型用于十进制浮点运算。 相比内置的 [`float`](https://docs.python.org/zh-cn/3.6/library/functions.html#float) 二进制浮点实现，该类特别适用于
+
+- 财务应用和其他需要精确十进制表示的用途，
+- 控制精度，
+- 控制四舍五入以满足法律或监管要求，
+- 跟踪有效小数位，或
+- 用户期望结果与手工完成的计算相匹配的应用程序。
+
+[`Decimal`](https://docs.python.org/zh-cn/3.6/library/decimal.html#decimal.Decimal) 表示的结果会保留尾部的零，并根据具有两个有效位的被乘数自动推出四个有效位。 Decimal 可以模拟手工运算来避免当二进制浮点数无法精确表示十进制数时会导致的问题。
+
+# 虚拟环境和包
+
+## 概述
+
+Python应用程序通常会使用不在标准库内的软件包和模块。应用程序有时需要特定版本的库，因为应用程序可能需要修复特定的错误，或者可以使用库的过时版本的接口编写应用程序。
+
+这意味着一个Python安装可能无法满足每个应用程序的要求。如果应用程序A需要特定模块的1.0版本但应用程序B需要2.0版本，则需求存在冲突，安装版本1.0或2.0将导致某一个应用程序无法运行。
+
+这个问题的解决方案是创建一个 [virtual environment](https://docs.python.org/zh-cn/3.6/glossary.html#term-virtual-environment)，一个目录树，其中安装有特定Python版本，以及许多其他包。
+
+然后，不同的应用将可以使用不同的虚拟环境。 要解决先前需求相冲突的例子，应用程序 A 可以拥有自己的 安装了 1.0 版本的虚拟环境，而应用程序 B 则拥有安装了 2.0 版本的另一个虚拟环境。 如果应用程序 B 要求将某个库升级到 3.0 版本，也不会影响应用程序 A 的环境。
+
+## 创建虚拟环境
+
+用于创建和管理虚拟环境的模块称为 [`venv`](https://docs.python.org/zh-cn/3.6/library/venv.html#module-venv)。[`venv`](https://docs.python.org/zh-cn/3.6/library/venv.html#module-venv) 通常会安装你可用的最新版本的 Python。如果您的系统上有多个版本的 Python，您可以通过运行 `python3` 或您想要的任何版本来选择特定的Python版本。
+
+要创建虚拟环境，请确定要放置它的目录，并将 [`venv`](https://docs.python.org/zh-cn/3.6/library/venv.html#module-venv) 模块作为脚本运行目录路径:
+
+```python
+python3 -m venv tutorial-env
+```
+
+如果它不存在，这将创建 `tutorial-env` 目录，并在其中创建包含Python解释器，标准库和各种支持文件的副本的目录。
+
+在Windows上，运行:
+
+```
+tutorial-env\Scripts\activate.bat
+```
+
+在Unix或MacOS上，运行:
+
+```
+source tutorial-env/bin/activate
+```
+
+（这个脚本是为bash shell编写的。如果你使用 **csh** 或 **fish** shell，你应该改用 `activate.csh` 或 `activate.fish` 脚本。）
+
+激活虚拟环境将改变shell的命令提示来显示您正在使用的虚拟环境，以及改变当前环境，使运行``python``时能使用特定版本的Python安装。例如：
+
+```python
+$ source ~/envs/tutorial-env/bin/activate
+(tutorial-env) $ python
+Python 3.5.1 (default, May  6 2016, 10:59:36)
+  ...
+>>> import sys
+>>> sys.path
+['', '/usr/local/lib/python35.zip', ...,
+'~/envs/tutorial-env/lib/python3.5/site-packages']
+>>>
+```
+
+## 使用pip管理包
+
+可以使用一个名为 **pip** 的程序来安装、升级和移除软件包。默认情况下 `pip` 将从 Python Package Index <[https://pypi.org](https://pypi.org/)> 安装软件包。你可以在浏览器中访问 Python Package Index 或是使用 `pip` 受限的搜索功能:
+
+```python
+(tutorial-env) $ pip search astronomy
+skyfield               - Elegant astronomy for Python
+gary                   - Galactic astronomy and gravitational dynamics.
+novas                  - The United States Naval Observatory NOVAS astronomy library
+astroobs               - Provides astronomy ephemeris to plan telescope observations
+PyAstronomy            - A collection of astronomy related tools for Python.
+...
+```
+
+可以通过提供包名称后跟 `==` 和版本号来安装特定版本的包：
+
+```python
+(tutorial-env) $ pip install requests==2.6.0
+Collecting requests==2.6.0
+  Using cached requests-2.6.0-py2.py3-none-any.whl
+Installing collected packages: requests
+Successfully installed requests-2.6.0
+```
+
+可以提供不同的版本号来获取该版本，或者您可以运行 `pip install --upgrade` 将软件包升级到最新版本：
+
+```python
+(tutorial-env) $ pip install --upgrade requests
+Collecting requests
+Installing collected packages: requests
+  Found existing installation: requests 2.6.0
+    Uninstalling requests-2.6.0:
+      Successfully uninstalled requests-2.6.0
+Successfully installed requests-2.7.0
+```
+
+`pip uninstall` 后跟一个或多个包名称将从虚拟环境中删除包。
+
+`pip show` 将显示有关特定包的信息：
+
+```python
+(tutorial-env) $ pip show requests
+---
+Metadata-Version: 2.0
+Name: requests
+Version: 2.7.0
+Summary: Python HTTP for Humans.
+Home-page: http://python-requests.org
+Author: Kenneth Reitz
+Author-email: me@kennethreitz.com
+License: Apache 2.0
+Location: /Users/akuchling/envs/tutorial-env/lib/python3.4/site-packages
+Requires:
+```
+
+`pip list` 将显示虚拟环境中安装的所有软件包：
+
+```python
+(tutorial-env) $ pip list
+novas (3.1.1.3)
+numpy (1.9.2)
+pip (7.0.3)
+requests (2.7.0)
+setuptools (16.0)
+```
+
+`pip freeze` 将生成一个类似的已安装包列表，但输出使用 `pip install` 期望的格式。一个常见的约定是将此列表放在 `requirements.txt` 文件中：
+
+```python
+(tutorial-env) $ pip freeze > requirements.txt
+(tutorial-env) $ cat requirements.txt
+novas==3.1.1.3
+numpy==1.9.2
+requests==2.7.0
+```
+
