--- a/_posts/2021-01-23-01_Python Basic 01.md
+++ b/_posts/2021-01-23-01_Python Basic 01.md
@@ -3,7 +3,7 @@ layout: post
 title: Python基础01
 date: 2021-01-23
 author: Zhiliang 
-tags: [Machine Learning,Python,Basic]
+tags: [Python,Basic]
 toc: true
 mathjax: true
 ---
