--- a/_posts/2021-02-04-01_Python Basic 02.md
+++ b/_posts/2021-02-04-01_Python Basic 02.md
@@ -3,7 +3,7 @@ layout: post
 title: Python基础02
 date: 2021-02-04
 author: Zhiliang 
-tags: [Machine Learning,Python,Basic]
+tags: [Python,Basic]
 toc: true
 mathjax: true
 ---
