--- a/_posts/2021-02-18-01_Numpy.md
+++ b/_posts/2021-02-18-01_Numpy.md
@@ -20,6 +20,8 @@ NumPy是一个开源的Python科学计算基础库,包含:
 
 摘自：https://www.numpy.org.cn/user/basics/
 
+Code：https://github.com/ZhiliangJia/MachineWorkspace/tree/master/01-Numpy
+
 # 基础知识
 
 NumPy的主要对象是同构多维数组。它是一个元素表（通常是数字），所有类型都相同，由非负整数元组索引。在NumPy维度中称为 *轴* 。
@@ -936,7 +938,7 @@ array([[0, 1, 2, 3],
 >>> plt.show()
 ```
 
-![quickstart-1](https://www.numpy.org.cn/static/images/quickstart-1.png)
+![](https://gitee.com/zhiliangj/Typora_Img/raw/master/2021-02-21%2001-05-00.png)
 
 使用布尔值进行索引的第二种方法更类似于整数索引; 对于数组的每个维度，我们给出一个1D布尔数组，选择我们想要的切片：
 
